Now uses Java 15 (#2)
* added upgraded java features

* add rsocket security

* angular stuff